--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,11 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    def lifecycle_version = "2.3.1"
+    def arch_version = "2.1.0"
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.3.1"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata:2.3.1"
 }
